--- a/src/index.css
+++ b/src/index.css
@@ -19,7 +19,9 @@ html {
 
 body {
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto,
+  font-family:Roboto,-apple-system,
+  BlinkMacSystemFont,
+  'Segoe UI',
     Oxygen-Sans, Ubuntu, Cantarell, 'Helvetica Neue', sans-serif,'Oleo Script Swash Caps',
     cursive;
   color: #212121;
